--- a/style.css
+++ b/style.css
@@ -1,9 +1,26 @@
-.header{
+#page_header{
     text-align: center;
-    background-color: rgb(48, 49, 49);
-    font-size: 30pt;
-    color: whitesmoke; 
-    padding: 15px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: bold; 
+    background-color:#3d6488;
+    font-family: 'Open Sans Condensed', sans-serif;
+    color: white
+
+}
+
+
+.btn{
+    background-color: #3d6488;
+    color: white;
+    font-family: 'Open Sans Condensed', sans-serif;
+    border-radius: 2px; 
+
+}
+
+
+.left_div{
+    /* background-color: #e2d9be;  */
+    height: 100%; 
+}
+
+.card-body{
+    background-color: #3d6488;
 }
