--- a/style.css
+++ b/style.css
@@ -12,6 +12,10 @@
     color: white;
     font-family: 'Open Sans Condensed', sans-serif;
     border-radius: 2px; 
+    margin-left: 20%;
+    margin-right: 20%;
+    margin-top: 2px;
+    margin-bottom: 2px;
 
 }
 
